# claude-code-notify

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SESSION_HANDOFF.md
docs/: 01-windows-tray-application.md  02-claude-code-state-monitoring.md  10-architecture.md  11-features.md  12-implementation-plan.md  13-tauri-guide.md  14-communication-alternatives.md
mqtt-publish/: Cargo.toml
mqtt-publish/src/: main.rs
src/: dashboard.css  export.css  export.html  export.js  index.html  main.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: rumqttd.toml
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  broker.rs  client.rs  export.rs  lib.rs  main.rs  notification_history.rs  notification_state.rs  settings.rs  state.rs  taskbar.rs  templates.rs  tray.rs  tray_flash.rs
