[package]
name = "claude-code-notify"
version = "0.1.0"
description = "Claude Code Notification System"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_code_notify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

# MQTT
rumqttd = "0.20"
rumqttc = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = "1"

# Tauri plugins
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"

# Export functionality
zip = { version = "2", default-features = false, features = ["deflate"] }
local-ip-address = "0.6"

# Random name generation
rand = "0.9"

